added support for different versions of old and young GC